Added Google logo and search bar.

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <img src="assets/megan.png" alt="Gmail" class="personal" class= "nav-right">
     </span>
     </nav>
+    <main>
+        <div class="logo">
+            <img src="assets/google-logo.png" alt="google logo">
+        </div>
+        <div class="input">
+            <input type="text">
+        </div>
+    </main>
 </body>
 </html>
