Added images to search bar and search buttons.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
         <div class="logo">
             <img src="assets/google-logo.png" alt="google logo">
         </div>
-        <div class="input">
-            <input type="text">
+        <div class="search-wrapper">
+            <input type="text" class="search-input" >
+            <img src="assets/magnify" alt="" class="search-img">
+            <img src="assets/voice" alt="" class="search-voice">
+        </div>
+        <div class="buttons">
+            <button class="button" class="gsearch">Google Search</button>
+            <button class="button">I'm Feeling Lucky</button>
         </div>
     </main>
 </body>
