--- a/index.html
+++ b/index.html
@@ -33,5 +33,19 @@
             <button class="button">I'm Feeling Lucky</button>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+        <span id= "span">
+            <a href="#" class="footer-left">Advertising</a>
+            <a href="#" class="footer-left">Business</a>
+            <a href="#" class="footer-left">How Search works</a>
+        </span>
+        <span id= "span-right">
+            <a href="#" class="footer-right">Privacy</a>
+            <a href="#" class="footer-right">Terms</a>
+            <a href="#" class="footer-right">Settings</a>
+        </span>
+        </div>
+    </footer>
 </body>
 </html>
